--- a/ansible/roles/dev/tasks/main.yaml
+++ b/ansible/roles/dev/tasks/main.yaml
@@ -9,6 +9,7 @@
   with_items:
     - user.name "Neal Finne"
     - user.email "neal@nealfinne.com"
+
 - name: create projects directory
   sudo: yes
   sudo_user: neal
@@ -25,7 +26,10 @@
 
 - name: install jdk
   apt: pkg=default-jdk state=present
-  tags: dev
+  tags: dev java
+- name: install gradle
+  apt: pkg=gradle state=present
+  tags: dev java
 
 - name: install powerline
   apt: pkg=powerline state=present
