Setting git push.default = simple for neal

--- a/ansible/roles/dev/tasks/main.yaml
+++ b/ansible/roles/dev/tasks/main.yaml
@@ -9,6 +9,7 @@
   with_items:
     - user.name "Neal Finne"
     - user.email "neal@nealfinne.com"
+    - push.default "simple"
 
 - name: create projects directory
   sudo: yes
