--- a/ansible/roles/dev/tasks/main.yaml
+++ b/ansible/roles/dev/tasks/main.yaml
@@ -31,6 +31,12 @@
 - name: install gradle
   apt: pkg=gradle state=present
   tags: dev java
+- name: enable gradle daemon for neal
+  sudo: yes
+  sudo_user: neal
+  lineinfile:
+    line: "org.gradle.daemon=true"
+    create: yes
 
 - name: install powerline
   apt: pkg=powerline state=present
