--- a/ansible/ec2.yaml
+++ b/ansible/ec2.yaml
@@ -17,8 +17,13 @@
         group: master
       register: ec2
     - name: add all public instance ip addresses to host group
-      add_host: hostname={{ item.public_ip }} groups=ec2hosts
+      add_host: hostname={{ item.public_dns_name }} groups=ec2hosts
       with_items: ec2.tagged_instances
+    - name: wait for ssh to come up
+      local_action: wait_for
+        host: {{ item.public_dns_name }}
+        port: 22
+        state: started
 - hosts: ec2hosts
   user: admin
   sudo: yes
