--- a/ansible/ec2.yaml
+++ b/ansible/ec2.yaml
@@ -21,7 +21,7 @@
       with_items: ec2.tagged_instances
     - name: wait for ssh to come up
       local_action: wait_for
-        host: {{ item.public_dns_name }}
+        host: "{{ item.public_dns_name }}"
         port: 22
         state: started
 - hosts: ec2hosts
