--- a/ansible/ec2.yaml
+++ b/ansible/ec2.yaml
@@ -20,10 +20,8 @@
       add_host: hostname={{ item.public_dns_name }} groups=ec2hosts
       with_items: ec2.tagged_instances
     - name: wait for ssh to come up
-      local_action: wait_for
-        host: "{{ item.public_dns_name }}"
-        port: 22
-        state: started
+      local_action: wait_for host={{ item.public_dns_name }} port=22 state=started
+      with_items: ec2.tagged_instances
 - hosts: ec2hosts
   user: admin
   sudo: yes
