revisions for use at work with separate inventory

--- a/ansible/site.yaml
+++ b/ansible/site.yaml
@@ -1,7 +1,11 @@
 ---
 - hosts:
-    - dev.okgreta.com
+    - all
   sudo: true
   roles:
     - common
+- hosts:
+    - dev
+  sudo: true
+  roles:
     - dev
