updating path for files in neal role

--- a/ansible/roles/neal/tasks/main.yaml
+++ b/ansible/roles/neal/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 - name: copy user settings
   copy:
-    src: files/{{ item }}
+    src: "{{ item }}"
     dest: ~/{{ item }}
   with_items:
     - .hgignore
