specify groups, including sudo, for user neal

--- a/ansible/roles/common/tasks/main.yaml
+++ b/ansible/roles/common/tasks/main.yaml
@@ -8,6 +8,7 @@
     name: neal
     state: present
     shell: /bin/bash
+    groups: neal,sudo
   tags: neal
 - name: set password for user neal
   user:
