--- a/ansible/ec2.yaml
+++ b/ansible/ec2.yaml
@@ -1,27 +1,9 @@
 ---
 - hosts: localhost
   connection: local
-  gather_facts: False
-  tasks:
-    - name: provision a master instance
-      ec2:
-        key_name: neal
-        region: us-west-2
-        image: ami-3d56520d
-        instance_type: t2.nano
-        count_tag:
-          Name: master
-        exact_count: 1
-        instance_tags:
-          Name: master
-        group: master
-      register: ec2
-    - name: add all public instance ip addresses to host group
-      add_host: hostname={{ item.public_dns_name }} groups=ec2hosts
-      with_items: ec2.tagged_instances
-    - name: wait for ssh to come up
-      local_action: wait_for host={{ item.public_dns_name }} port=22 state=started
-      with_items: ec2.tagged_instances
+  gather_facts: false
+  roles:
+    - ec2
 - hosts: ec2hosts
   user: admin
   sudo: yes
